fix gaps

--- a/styles/clinicsPage.module.css
+++ b/styles/clinicsPage.module.css
@@ -247,7 +247,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 10px;
+    padding: 0 16px;
   }
   .cardItemContainer {
     margin:0;
@@ -275,5 +275,9 @@
     position: absolute!important;
     bottom: 0;
     margin-bottom: 50px;
+  }
+  .clinicAddressText {
+    display: flex;
+    gap:8.5px;
   }
 }
